--- a/Assignment2/Arctic Ocean.html
+++ b/Assignment2/Arctic Ocean.html
@@ -1,10 +1,16 @@
-<TITLE>Pacific Ocean</TITLE>
-<H2>Pacific Ocean </H2>
+<TITLE>Arctic Ocean</TITLE>
+<H2>Arctic Ocean</H2>
 (from Wikipedia)
 
 <p>
-The Pacific Ocean is the largest of the Earth's oceanic divisions. It 
-extends from the 
-<A href="Arctic.html">Arctic Ocean</A> in the north to the Southern Ocean (or, 
-depending on definition, to Antarctica) in the south and is bounded by 
-Asia and Australia in the west and the Americas in the east.
+The Arctic Ocean (also known as the Northern Ocean), located in the 
+Northern Hemisphere and mostly in the Arctic north polar region, is the 
+smallest and shallowest of the world's five major oceanic divisions.[1] 
+The International Hydrographic Organization (IHO) recognizes it as an 
+ocean, although some oceanographers call it the Arctic Mediterranean Sea 
+or simply the Arctic Sea, classifying it a mediterranean sea or an estuary 
+of the 
+<A href="Atlantic.html">Atlantic</A> Ocean. 
+Alternatively, the Arctic 
+Ocean can be seen 
+as the northernmost part of the all-encompassing World Ocean.
