--- a/Assignment2/Atlantic.html
+++ b/Assignment2/Atlantic.html
@@ -1,16 +1,13 @@
-<TITLE>Arctic Ocean</TITLE>
-<H2>Arctic Ocean</H2>
+<TITLE>Atlantic Ocean</TITLE>
+<H2>Atlantic Ocean </H2>
 (from Wikipedia)
 
 <p>
-The Arctic Ocean (also known as the Northern Ocean), located in the 
-Northern Hemisphere and mostly in the Arctic north polar region, is the 
-smallest and shallowest of the world's five major oceanic divisions.[1] 
-The International Hydrographic Organization (IHO) recognizes it as an 
-ocean, although some oceanographers call it the Arctic Mediterranean Sea 
-or simply the Arctic Sea, classifying it a mediterranean sea or an estuary 
-of the 
-<A href="Atlantic.html">Atlantic</A> Ocean. 
-Alternatively, the Arctic 
-Ocean can be seen 
-as the northernmost part of the all-encompassing World Ocean.
+The Atlantic Ocean is the second largest of the world's oceanic divisions, 
+following the <A href="Pacific.html">Pacific Ocean</A>. 
+With a total area of 
+about 106,400,000 square 
+kilometres (41,100,000 sq mi),[1] it covers approximately 20 percent of 
+the Earth's surface and about 29 percent of its water surface area. The 
+first part of its name refers to Atlas of Greek mythology, making the 
+Atlantic the "Sea of Atlas".
