--- a/Assignment2/Pacific Ocean.html
+++ b/Assignment2/Pacific Ocean.html
@@ -1,13 +1,10 @@
-<TITLE>Atlantic Ocean</TITLE>
-<H2>Atlantic Ocean </H2>
+<TITLE>Pacific Ocean</TITLE>
+<H2>Pacific Ocean </H2>
 (from Wikipedia)
 
 <p>
-The Atlantic Ocean is the second largest of the world's oceanic divisions, 
-following the <A href="Pacific.html">Pacific Ocean</A>. 
-With a total area of 
-about 106,400,000 square 
-kilometres (41,100,000 sq mi),[1] it covers approximately 20 percent of 
-the Earth's surface and about 29 percent of its water surface area. The 
-first part of its name refers to Atlas of Greek mythology, making the 
-Atlantic the "Sea of Atlas".
+The Pacific Ocean is the largest of the Earth's oceanic divisions. It 
+extends from the 
+<A href="Arctic.html">Arctic Ocean</A> in the north to the Southern Ocean (or, 
+depending on definition, to Antarctica) in the south and is bounded by 
+Asia and Australia in the west and the Americas in the east.
